--- a/minimax.tex
+++ b/minimax.tex
@@ -16,7 +16,7 @@
 \usepackage{algorithm, algpseudocode}
 \usepackage{booktabs}
 \usepackage{pgfplots}
-\pgfplotsset{compat=1.17}
+%\pgfplotsset{compat=1.17}
 
 \newcommand{\commentOC}[1]{\textcolor{blue}{\small$\big[$OC: #1$\big]$}}
 \newcommand{\commentBN}[1]{\textcolor{red}{\small$\big[$BN: #1$\big]$}}
@@ -623,10 +623,9 @@ For the experiments we performed, we see that the number of questions required t
 			\addlegendimage{mark=*,violet,mark size=2}
 			\addlegendimage{mark=square*,green,mark size=2}
 			\addlegendimage{mark=diamond*,red,mark size=2}
+			\addlegendimage{mark=halfsquare left*,blue,mark size=2}
 			\addlegendimage{mark=halfsquare right*,brown,mark size=2}
-			\addlegendimage{mark=oplus*,blue,mark size=2}
 			\addlegendimage{mark=pentagon*,cyan,mark size=2}
-			\addlegendimage{mark=halfsquare left*,pink,mark size=2}
 			\addlegendimage{mark=halfsquare*,magenta,mark size=2}
 			
 			
@@ -638,14 +637,12 @@ For the experiments we performed, we see that the number of questions required t
 			\addlegendentry{m=5, n=20}
 			\addplot[thick, mark=diamond*, mark size = {2}, mark indices = {150}, red] table [x=k, y=10.20]{data/linearity.dat};
 			\addlegendentry{m=10, n=20}
-			\addplot[thick, mark=oplus*, mark size = {2}, mark indices = {60}, blue] table [x=k, y=14.9]{data/linearity.dat};
+			\addplot[thick, mark=halfquare left*, mark size = {2}, mark indices = {60}, blue] table [x=k, y=14.9]{data/linearity.dat};
 			\addlegendentry{m=14, n=9}
 			\addplot[thick, mark=halfsquare right*, mark size = {2}, mark indices = {60}, brown] table [x=k, y=skate]{data/linearity.dat};
 			\addlegendentry{skate m14n9}
 			\addplot[thick, mark=pentagon*, mark size = {2}, mark indices = {300}, cyan] table [x=k, y=10.30]{data/linearity.dat};
 			\addlegendentry{m=10, n=30}
-			\addplot[thick, mark=halfsquare left*, mark size = {2}, mark indices = {200}, pink] table [x=k, y=sushi]{data/linearity.dat};
-			\addlegendentry{sushi m10n30}
 			\addplot[thick, mark=halfsquare*, mark size = {2}, mark indices = {400}, magenta] table [x=k, y=15.30]{data/linearity.dat};
 			\addlegendentry{m=15, n=30}
 			
