main file directive

--- a/cover letter/cover_letter.tex
+++ b/cover letter/cover_letter.tex
@@ -1,3 +1,5 @@
+% !TEX root = resubmission.tex
+
 (Rebuttal)\\
 Our proposal is methodologically innovative: it addresses in a new way the difficult problem of eliciting preferences about voting rules. It opens up a novel path to gather and exploit preferential information about voting rules, in parallel with more classical preferential information about the alternatives under scrutiny. As a result, multiple challenging research questions open up, several of which are raised by the reviewers. We warmly thank them for these observations.
 
